--- a/angular.json
+++ b/angular.json
@@ -95,7 +95,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
             ],
             "scripts": []
           }
